<resources>
    <string name="app_name">SoccerLeagueApp</string>
    <string name="str_live_title">En vivo</string>
    <string name="str_statistics">Estadísticas</string>
    <string name="str_players">Jugadores</string>
    <string name="str_img_content_description">En vivo</string>
    <string name="str_head_row_team">Equipo</string>
    <string name="str_content_description">team_shield</string>
    <string name="str_match_detal">Detalles</string>
    <string name="str_there_are_no_matches">No hay partidos en vivo en el momento</string>
    <string name="str_there_are_no_match_details">No hay detalles destacados aún</string>
</resources>
