<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.sceballosdev.soccerleagueapp.viewmodel.matchdetails.MatchViewModel" />

        <variable
            name="result"
            type="com.sceballosdev.soccerleagueapp.model.Result" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activities.MatchDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/colorBackgroundTopView">

            <ImageButton
                android:id="@+id/imageView3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/str_content_description"
                android:onClick="onClickBtnClose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/imgLocalTeam"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="36dp"
                    android:contentDescription="@string/str_img_content_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    app:srcCompat="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/imgVisitorTeam"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="36dp"
                    android:contentDescription="@string/str_img_content_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{result.localGoals +" : "+result.visitorGoals}'
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imgLocalTeam"
                    app:layout_constraintEnd_toStartOf="@+id/imgVisitorTeam"
                    app:layout_constraintStart_toEndOf="@+id/imgLocalTeam"
                    app:layout_constraintTop_toTopOf="@+id/imgLocalTeam" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text='@{result.currentTime + " min"}'
                    android:textColor="@color/colorCurrentTime"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{result.localTeam.name}"
                    android:textColor="@color/colorTextNameTeam"
                    app:layout_constraintEnd_toEndOf="@+id/imgLocalTeam"
                    app:layout_constraintStart_toStartOf="@+id/imgLocalTeam"
                    app:layout_constraintTop_toBottomOf="@+id/imgLocalTeam" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{result.visitorTeam.name}"
                    android:textColor="@color/colorTextNameTeam"
                    app:layout_constraintEnd_toEndOf="@+id/imgVisitorTeam"
                    app:layout_constraintStart_toStartOf="@+id/imgVisitorTeam"
                    app:layout_constraintTop_toBottomOf="@+id/imgVisitorTeam" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_match_detal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMatchDetails"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:setAdapter="@{model.recyclerMatchDetailsAdapter}" />

            <TextView
                android:id="@+id/txtThereAreNotMatchDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/str_there_are_no_match_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pbLoadingDetails"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:indeterminateTint="@color/colorCurrentTime"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>